# kitsuvm

./: .gitignore  Cargo.toml  LICENSE.md  README.md  common.toml  fifo.sv  fifo_in.toml  fifo_out.toml  pinlist.toml
examples/fifo/: README.md  cmd.sh  fifo.sv  fifo_16.toml  fifo_32.toml  fifo_in.toml  fifo_out.toml  instances.toml  project.toml
examples/handshake/: cmd.sh  handshake.toml  project.toml
examples/healthcheck/: README.md  cmd.sh  healthcheck.toml
src/: dut_parser.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: instance.rs  mod.rs  project.rs  vip.rs
src/config/common/: mod.rs
src/config/pinlist/: mod.rs
src/config/project/: mod.rs
src/config/template/: mod.rs
src/config/template/agent/: mod.rs
src/config/vip/: mod.rs
src/dut/: parser.rs  utils.rs
src/render/: mod.rs  top.rs  vip.rs
src/uvm/: mod.rs
src/uvm/tb/: mod.rs
src/uvm/th/: mod.rs
templates/: base_template.sv  base_template.sv.j2  driver.sv  driver.sv.j2  generic_class.sv.j2  generic_function.sv  generic_function.sv.j2  generic_variable.sv  header.sv  text_utils.sv  text_utils.sv.j2
templates/top/: config.sv.j2  env.sv.j2  pkg.sv.j2  scoreboard.sv.j2  self_test_scoreboard.sv.j2  seq_lib.sv.j2
templates/top/tb/: self_test_th.sv.j2  tb.sv.j2  th.sv.j2
templates/top/test/: test.sv.j2  test_pkg.sv.j2
templates/top/utils/: instance.sv.j2
templates/vip/: agent.sv.j2  config.sv.j2  coverage.sv.j2  driver.sv.j2  if.sv.j2  monitor.sv.j2  pkg.sv.j2  seq_lib.sv.j2  sequencer.sv.j2  tx.sv.j2
templates/vip/utils/: port_direction.sv.j2
(+2 files in other folders)
