[package]
name = "kitsuvm_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
#confy = "0.5"
serde = { version = "1.0", features = ["derive"] }
#serde_yaml = "0.9"
sv-parser = "0.12"
tera = "1.17"
toml = "0.5"
