[package]
name = "kitsuvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
sv-parser = "0.12"
tera = "1.17"
thiserror = "1.0"
toml = "0.5"
